Visual Changes made
Visual changes made to some links that weren’t going to be used.

--- a/views/board.ejs
+++ b/views/board.ejs
@@ -44,7 +44,7 @@
         <hr>
     </div>
 
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-12" id="postWrapper">
         <div style="display: flex; flex-wrap: wrap;">
             <% messages.forEach(function(message){ %>
             <%- include materialCard.ejs %> <% });%>
