--- a/views/materialCard.ejs
+++ b/views/materialCard.ejs
@@ -27,7 +27,7 @@
     <div class="card-data">
         <ul>
             <li><i class="fa fa-clock-o"></i> <%= message.date %></li>
-            <li><a href="#"><i class="fa fa-comments-o"></i>12</a></li>
+            <!-- <li><a href="#"><i class="fa fa-comments-o"></i>12</a></li> -->
         </ul>
     </div>
     <!-- Card footer -->
