--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body {
+body{
 	background-image: url('../images/gridtalk-and-background.jpg');
 	background-repeat:no-repeat;
   	background-size:cover;
@@ -18,4 +18,9 @@ h1, label, .bottom-links{
     padding: 20px; 
     width: 300px;
     height: auto;
+}
+
+#postWrapper{
+	display: flex;
+	flex-direction: row;
 }
