--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Node Authentication</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
@@ -26,7 +26,15 @@
 
                     <p>
                         <strong>id</strong>: <%= user._id %><br>
-                        <strong>username</strong>: <%= user.local.username %><br>
+                        <strong>username</strong>: 
+                        <% if (user.facebook.name) { %>
+                            <%= user.facebook.name %>
+                        <% } else { %>
+                            <%= user.local.username %> 
+                        <% } %>
+                        
+
+                        <br>
                         <strong>password</strong>: <%= user.local.password %>
                     </p>
 
