--- a/public/css/cardStyle.css
+++ b/public/css/cardStyle.css
@@ -3,8 +3,9 @@
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
   max-width: 25em;
   font-family: Roboto, sans-serif;
-    margin-right: 5px;
-    margin-left: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 10px;
 }
 
 h1, h2, h3, h4, h5, h6 {
