--- a/public/css/cardStyle.css
+++ b/public/css/cardStyle.css
@@ -6,6 +6,9 @@
   margin-right: 5px;
   margin-left: 5px;
   margin-bottom: 10px;
+  max-width: 325px;
+  min-width: 325px;
+  word-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -53,7 +56,7 @@ h4 {
 
 .card-block {
   padding: 1.25rem;
-  background-color: grey;
+  background-color: gray;
 }
 
 hr {
