--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
     <title>Gridtalk Authentication</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-    <link rel="stylesheet" href="./css/style.css" type="text/css">    
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/index.css" type="text/css">    
+    
     <style>
         body        { padding-top:380px; }
     </style>
