Added style changes to login.ejs in mobile view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <link rel="stylesheet" href="./css/index.css" type="text/css">    
-    
-    <style>
-        body        { padding-top:380px; }
-    </style>
 </head>
 <body>
+<div class="container" id="logoContainer">
+    <div class="row" class="col-sm-12" class="logoMobile">
+        <img src="/images/mobile-art/logoWhite.png" style="height: 350px;" />
+    </div>
+</div>
 <div class="container">
 
     <div class="jumbotron text-center">
