--- a/public/css/login.css
+++ b/public/css/login.css
@@ -13,4 +13,8 @@
 		background-image: url('../images/mobile-art/bg-mobile-board.jpg');
 		padding-top: 0px;
 	}
+
+	#loginWrap {
+		color: white;
+	}
 }
