--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <style>
-        body        { padding-top:380px; }
-    </style>
+    <link rel="stylesheet" href="./css/login.css" type="text/css">
 </head>
 <body>
+<div class="container" id="logoContainer">
+    <div class="row" class="col-sm-12" class="logoMobile">
+        <img src="/images/mobile-art/logoWhite.png" style="height: 350px;" />
+    </div>
+</div>
 <div class="container">
 
-<div class="col-sm-6 col-sm-offset-3">
+<div class="col-sm-6 col-sm-offset-3" id="loginWrap">
 
     <h1><span class="fa fa-sign-in"></span> Login</h1>
 
